[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "radiotap"
description = "Parse Radiotap headers with Python."
readme = "README.md"
keywords = ["radiotap"]
license = {file = "COPYING"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
homepage = "http://www.radiotap.org/"
Source = "https://github.com/macleays/python-radiotap"